<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F5"
    android:padding="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Judul -->
        <TextView
            android:text="@string/data_kewarganegaraan_indonesia"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"  android:layout_height="50dp" android:layout_width="300dp"/>

        <!-- Input Text -->
        <EditText
            android:id="@+id/etNama"
            android:hint="@string/nama_lengkap"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etNIK"
            android:hint="@string/nik"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etKabupaten"
            android:hint="@string/kabupaten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etKecamatan"
            android:hint="@string/kecamatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etDesa"
            android:hint="@string/desa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etRT"
            android:hint="@string/rt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etRW"
            android:hint="@string/rw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Jenis Kelamin -->
        <TextView
            android:text="@string/jenis_kelamin"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"  android:layout_height="30dp" android:layout_width="200dp"/>

        <RadioGroup
            android:id="@+id/rgJenisKelamin"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbLaki"
                android:textColor="@color/black"
                android:text="@string/laki_laki"  android:layout_height="30dp" android:layout_width="150dp"/>

            <RadioButton
                android:id="@+id/rbPerempuan"
                android:textColor="@color/black"
                android:text="@string/perempuan"  android:layout_height="30dp" android:layout_width="150dp"/>
        </RadioGroup>

        <!-- Status Pernikahan -->
        <TextView
            android:text="@string/status_pernikahan"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"  android:layout_height="30dp" android:layout_width="150dp"/>

        <Spinner
            android:id="@+id/spStatus"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Tombol -->
        <Button
            android:id="@+id/btnSimpan"
            android:text="@string/simpan_data"
            android:layout_marginTop="20dp"
            android:backgroundTint="#006400"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnReset"
            android:text="@string/reset_data"
            android:layout_marginTop="10dp"
            android:backgroundTint="#8B0000"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <!-- Output -->
        <TextView
            android:id="@+id/tvDaftar"
            android:layout_width="350dp"
            android:layout_height="176dp"
            android:layout_marginTop="20dp"
            android:text="@string/daftar_warga_negara_nbelum_ada_data_warga_yang_tersimpan"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
